# LLVM-DAG-Estimator

./: .gitignore  CMakeLists.txt  LoopAnalysis.cpp  LoopAnalysis.h  LoopAnalysisPass.h  LoopInfoAnalysis.h  LoopInfoAnalysisLegacyPass.h  LoopInfoAnalysisPass.h  Makefile  MemTracker.cpp  README.md  cfg_convert_and_move  compile_and_run_lli  create_exe  for_loop_count.cpp  for_loop_tracker.cpp  for_loop_tracker_legacy.cpp  run_loop_tracker  struct_test.cpp
include/: AnalysisInfo.h  DAGBuilder.h  DAGNode.h  DGBuilder.h  DepNode.h  DependencyGraph.h  FunctionInfoPass.h  LoopInfoAnalysis.h  LoopInfoAnalysisPass.h  ModuleInfoPass.h  VDG.h  VDGBuilder.h
scripts/: cfg_convert_and_move  dot_to_png  loop_tracker_gen_dag.py
src/: AnalysisInfo.h  CMakeLists.txt  DAGBuilder.cpp  DAGBuilder.h  DAGNode.cpp  DAGNode.h  DGBuilder.h  DepNode.h  DependencyGraph.h  FunctionInfoPass.cpp  FunctionInfoPass.h  LLVMHeaders.h  ModuleInfoPass.cpp  ModuleInfoPass.h  execute.cpp  llvmEstimator.h  main.cpp  optimize.cpp  parseIr.cpp  runAnalysis.cpp  test1.cpp  test2.cpp  test3.cpp
src/cmake/: llvmEstimatorConfig.cmake.in
